--- a/youtube-thumbnails-overlay.html
+++ b/youtube-thumbnails-overlay.html
@@ -2,80 +2,157 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Últimos Videos</title>
+<title>YouTube Overlay</title>
 
 <style>
-body {
+html, body {
   margin: 0;
+  padding: 0;
   background: transparent;
-  overflow: hidden;
-  font-family: Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.wrapper {
+/* CONTENEDOR AJUSTADO A MINIATURA YOUTUBE */
+#container {
+  width: 100%;
+  max-width: 1280px;
+  aspect-ratio: 16 / 9;   /* CLAVE */
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  box-shadow: 0 0 30px rgba(0,0,0,0.85);
+  background: black;
+}
+
+/* ===== BARRA SUPERIOR ===== */
+.top-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 60px;
+  width: 100%;
+  background: white;
+  display: flex;
+  align-items: center;
+  padding: 0 18px;
+  box-sizing: border-box;
+  z-index: 10;
+}
+
+.youtube-brand img {
+  height: 26px;
+}
+
+.handle {
+  margin-left: auto;
+  background: #111;
+  color: white;
+  padding: 10px 18px;
+  border-radius: 22px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/* ===== MINIATURAS ===== */
+.video {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.video.active {
+  opacity: 1;
+}
+
+.thumb {
   width: 100%;
   height: 100%;
-  display: flex;
-  gap: 14px;
-  animation: scroll 20s linear infinite;
+  object-fit: cover; /* SIN HUECOS */
 }
 
-.video {
-  width: 220px;
-  flex-shrink: 0;
-}
-
-.video img {
+/* ===== BARRA INFERIOR ===== */
+.bottom-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 70px;
   width: 100%;
-  border-radius: 12px;
-  box-shadow: 0 0 12px rgba(0,0,0,0.6);
+  background: #ff0000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
 }
 
-.title {
-  margin-top: 6px;
-  font-size: 12px;
+.bottom-bar span {
   color: white;
-  text-shadow: 0 0 5px black;
-  max-height: 32px;
-  overflow: hidden;
-}
-
-@keyframes scroll {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-50%); }
+  font-size: 28px;
+  font-weight: 900;
+  white-space: nowrap;
 }
 </style>
 </head>
 
 <body>
 
-<div class="wrapper" id="videos"></div>
+<div id="container">
+
+  <!-- TOP -->
+  <div class="top-bar">
+    <div class="youtube-brand">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg">
+    </div>
+    <div class="handle">@WIEDMANHUB</div>
+  </div>
+
+  <!-- BOTTOM -->
+  <div class="bottom-bar">
+    <span>LO MAS RECIENTE EN NUESTRO CANAL OFICIAL</span>
+  </div>
+
+</div>
 
 <script>
 const API_KEY = "AIzaSyCw1sgSV_qCUSYgiUcYeq0pQUNZIuTdKb4";
 const CHANNEL_ID = "UCIbWfCngxTPu8Qp4VyN97XA";
 const MAX_VIDEOS = 6;
+const DISPLAY_TIME = 6000;
+
+let current = 0;
+let videos = [];
 
 fetch(`https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet&order=date&maxResults=${MAX_VIDEOS}`)
 .then(res => res.json())
 .then(data => {
-  const container = document.getElementById("videos");
+  const container = document.getElementById("container");
 
   data.items.forEach(item => {
     if (!item.id.videoId) return;
 
-    container.innerHTML += `
-      <div class="video">
-        <img src="${item.snippet.thumbnails.medium.url}">
-        <div class="title">${item.snippet.title}</div>
-      </div>
+    const div = document.createElement("div");
+    div.className = "video";
+    div.innerHTML = `
+      <img class="thumb" src="${item.snippet.thumbnails.high.url}">
     `;
+    container.insertBefore(div, container.firstChild);
+    videos.push(div);
   });
 
-  // duplicamos para loop infinito
-  container.innerHTML += container.innerHTML;
+  if (videos.length > 0) {
+    videos[0].classList.add("active");
+    setInterval(cycle, DISPLAY_TIME);
+  }
 });
+
+function cycle() {
+  videos[current].classList.remove("active");
+  current = (current + 1) % videos.length;
+  videos[current].classList.add("active");
+}
 </script>
 
 </body>
 </html>
+
+
